--- a/Projects/index.html
+++ b/Projects/index.html
@@ -3,22 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Projects</title>
+    <h2><a href="../../">Home</a></h2>
     <h1> Homework 2</h1>
 
     <h3>Creating sub files to access and move around with</h3>
-
-    <h1>PRG Project</h1>
-    <h1><a href="PRG.html">PRG</a></h1>
-
-    <h1> PRG Project 2</h1>
-    <h1><a href="PRG2.html">PRG</a></h1>
-
-    <h2>Links</h2>
+    <h1>Projects</h1>
     <h2><ul>
-    <li><a href="../">IS117</a></li>
-        <br>
-    <li><a href="../../">Home</a></li>
+        <li><a href="project1.html">Project1</a></li>
+        <li><a href="project2.html">Project2</a></li>
     </ul></h2>
+
 </head>
 <body>
 
