--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
 
     <meta charset="UTF-8">
-    <title>IS117 Index</title>
-    <h2> IS117 Fridays 1:00 - 3:50 </h2>
+    <title>IS117 Home</title>
+    <h2><a href="../">Home</a></h2>
+    <h1> IS117 Homepage: Fridays 1:00 - 3:50 </h1>
     <h3> Robert Diasio </h3>
-    <h4>My Projects</h4>
+    <h2>Page for Homework : GIT Intro</h2>
+    <h1>Links Relative to IS117</h1>
     <h2><ul>
         <li><a href="Projects">Projects</a></li>
-        <li><a href="../">Home</a> </li>
+        <li><a href="about.html">About</a></li>
     </ul></h2>
 </head>
 <body>
