--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <meta charset="UTF-8">
     <title>IS117 Home</title>
-    <h2><a href="../">Home</a></h2>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+
     <h1> IS117 Homepage: Fridays 1:00 - 3:50 </h1>
     <h3> Robert Diasio </h3>
     <h2>Page for Homework : GIT Intro</h2>
     <h1>Links Relative to IS117</h1>
-    <h2><ul>
-        <li><a href="Projects">Projects</a></li>
-        <li><a href="about.html">About</a></li>
-    </ul></h2>
+
 </head>
 <body>
+
+<h2>
+    <menu>
+        <li><a href="../">Home</a></li>
+        <li><a href="Projects">Projects</a></li>
+        <li><a href="about.html">About</a></li>
+    </menu>
+</h2>
 
 </body>
 </html>
