Changed some of the CSS so that it fits for the width of a 1520 px page. Also changed the home and about info.

--- a/about.html
+++ b/about.html
@@ -3,12 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <title>About</title>
-    <h2>The about page for IS117</h2>
-    <br><h2>Required for the Homework</h2>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
-    <a href="../IS117">Go Back </a>
+    <h2>The About page for IS117</h2>
+    <h3>Required for the Homework</h3>
 </head>
 <body>
+<div id="wrapper">
+    <header>
+        <menu>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="Projects">Projects</a></li>
+            <li><a href="about.html">About</a></li>
+        </menu>
+    </header>
 
+    <main>
+        <h1>Lorum Ipsum</h1>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Morbi quis commodo odio aenean sed. Netus et malesuada fames ac turpis. Feugiat pretium
+            nibh ipsum consequat. Amet purus gravida quis blandit turpis cursus in. Id diam maecenas ultricies mi eget
+            mauris pharetra. Turpis egestas integer eget aliquet nibh. Dignissim suspendisse in est ante in nibh mauris
+            cursus. Ac auctor augue mauris augue neque gravida. Praesent elementum facilisis leo vel fringilla est.
+            Commodo viverra maecenas accumsan lacus vel facilisis. Ac odio tempor orci dapibus. Lorem ipsum dolor sit
+            amet. Sed adipiscing diam donec adipiscing. Non odio euismod lacinia at quis risus sed vulputate. Eu
+            volutpat odio facilisis mauris sit amet massa.
+        </p>
+        <p>
+            Facilisis mauris sit amet massa. Consequat nisl vel pretium lectus quam id leo. Massa tincidunt dui ut
+            ornare lectus sit amet est placerat. Nunc scelerisque viverra mauris in. Enim sed faucibus turpis in eu mi
+            bibendum neque. Mauris sit amet massa vitae. Est ante in nibh mauris cursus mattis. Parturient montes
+            nascetur ridiculus mus mauris vitae ultricies leo. Turpis egestas integer eget aliquet nibh praesent
+            tristique magna. Tincidunt arcu non sodales neque sodales.
+        </p>
+        <p>
+            Odio ut enim blandit volutpat maecenas volutpat blandit aliquam etiam. Pellentesque id nibh tortor id.
+            Vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt lobortis. Vitae aliquet nec
+            ullamcorper sit. Sem integer vitae justo eget magna. Sapien eget mi proin sed libero enim sed faucibus
+            turpis. Ac orci phasellus egestas tellus rutrum tellus pellentesque. Auctor neque vitae tempus quam. Ut
+            porttitor leo a diam sollicitudin tempor. Mauris sit amet massa vitae tortor condimentum. Ornare aenean
+            euismod elementum nisi quis eleifend quam adipiscing vitae. Gravida arcu ac tortor dignissim convallis
+            aenean. Eget mi proin sed libero enim sed faucibus. Leo vel fringilla est ullamcorper eget nulla. Sem
+            fringilla ut morbi tincidunt augue interdum velit euismod in.
+        </p>
+        <p>
+            Tristique sollicitudin nibh sit amet commodo. Sed vulputate odio ut enim. Sed enim ut sem viverra aliquet
+            eget sit amet. Curabitur vitae nunc sed velit dignissim sodales. Elit ut aliquam purus sit amet luctus
+            venenatis lectus. Dapibus ultrices in iaculis nunc. Vestibulum mattis ullamcorper velit sed ullamcorper. Est
+            ante in nibh mauris cursus. Urna nunc id cursus metus aliquam eleifend mi. Quam lacus suspendisse faucibus
+            interdum posuere lorem ipsum dolor sit.
+        </p>
+        <p>
+            Leo a diam sollicitudin tempor id eu nisl nunc. Non blandit massa enim nec dui nunc. Neque sodales ut etiam
+            sit. Sollicitudin aliquam ultrices sagittis orci a scelerisque purus semper. Eget egestas purus viverra
+            accumsan. Sed viverra tellus in hac habitasse platea dictumst. Risus nullam eget felis eget nunc lobortis.
+            Risus ultricies tristique nulla aliquet. Pharetra et ultrices neque ornare aenean euismod elementum. Fames
+            ac turpis egestas maecenas pharetra. Congue eu consequat ac felis donec et odio pellentesque. Pellentesque
+            diam volutpat commodo sed egestas egestas fringilla phasellus faucibus. Scelerisque viverra mauris in
+            aliquam sem. Quisque non tellus orci ac auctor augue mauris augue. Pulvinar pellentesque habitant morbi
+            tristique senectus et netus et. Pharetra et ultrices neque ornare aenean. Imperdiet proin fermentum leo vel
+            orci. Tincidunt tortor aliquam nulla facilisi cras fermentum odio eu.
+        </p>
+        <p>
+            Ipsum dolor sit amet consectetur adipiscing elit. Fringilla phasellus faucibus scelerisque eleifend donec.
+            Pellentesque id nibh tortor id aliquet lectus. Sapien eget mi proin sed libero enim sed. Eget lorem dolor
+            sed viverra ipsum nunc aliquet bibendum. Nec ultrices dui sapien eget mi proin sed. Amet nisl purus in
+            mollis. Cras fermentum odio eu feugiat pretium. Sed risus pretium quam vulputate dignissim. Facilisi nullam
+            vehicula ipsum a arcu. Metus aliquam eleifend mi in nulla posuere. Ut tellus elementum sagittis vitae et leo
+            duis ut diam. Risus nullam eget felis eget nunc lobortis mattis aliquam. Diam sollicitudin tempor id eu nisl
+            nunc. Duis convallis convallis tellus id. Tristique magna sit amet purus gravida quis. Massa enim nec dui
+            nunc mattis enim. Lectus magna fringilla urna porttitor rhoncus dolor purus. Nulla facilisi cras fermentum
+            odio eu feugiat. Dignissim convallis aenean et tortor at risus viverra.
+        </p>
+    </main>
+
+    <footer>
+        <small>&copy; copyright Nonexistant 2020 Robert Diasio </small>
+    </footer>
+
+</div>
 </body>
 </html>
