Changed some of the CSS so that it fits for the width of a 1520 px page. Also changed the home and about info.

--- a/about.html
+++ b/about.html
@@ -5,21 +5,23 @@
     <title>About</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
-    <h2>The About page for IS117</h2>
-    <h3>Required for the Homework</h3>
+
 </head>
 <body>
 <div id="wrapper">
     <header>
+        <h3>The About page for IS117</h3>
+        <h1>Required for the Homework</h1>
         <menu>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../">Robert Diasio</a></li>
+            <li><a href="index.html">IS117 Home</a></li>
             <li><a href="Projects">Projects</a></li>
             <li><a href="about.html">About</a></li>
         </menu>
     </header>
 
     <main>
-        <h1>Lorum Ipsum</h1>
+        <h2>Lorum Ipsum</h2>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Morbi quis commodo odio aenean sed. Netus et malesuada fames ac turpis. Feugiat pretium
