--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
     <title>IS117 Home</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
-    <h1> IS117 Homepage: Fridays 1:00 - 3:50 </h1>
-    <h3><a href="../"> Robert Diasio </a></h3>
 
 </head>
 
 <body>
-<h2> Page for Homework : GIT Intro </h2>
 <div id="wrapper">
     <header>
+        <h3> IS117 Homepage: Fridays 1:00 - 3:50 </h3>
+        <h1> Page for Homework : GIT Intro </h1>
         <menu>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../">Robert Diasio</a></li>
+            <li><a href="index.html">IS117 Home</a></li>
             <li><a href="Projects">Projects</a></li>
             <li><a href="about.html">About</a></li>
         </menu>
     </header>
 
     <main>
-        <h1>This is For the Homework assignment</h1>
+        <h2>This is For the Homework assignment</h2>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Morbi quis commodo odio aenean sed. Netus et malesuada fames ac turpis. Feugiat pretium
