Fixed the Links between pages

--- a/Projects/project1.html
+++ b/Projects/project1.html
@@ -2,18 +2,46 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Proj1</title>
-    <h2><a href="../../">Home</a></h2>
-    <h1>This is just a test project</h1>
-
-    <h3>Links</h3>
-    <h2><ul>
-        <li><a href="../index.html">IS117 Homepage</a></li>
-        <li><a href="index.html">Projects Homepage</a></li>
-    </ul></h2>
+    <title>Project1</title>
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
 
 </head>
 <body>
+<div id="wrapper">
+    <header>
 
+        <menu>
+            <li><a href="../../">Robert Diasio</a></li>
+            <li><a href="../">IS117 Home</a></li>
+            <li><a href="index.html">Projects</a></li>
+            <li><a href="../about.html">About</a></li>
+        </menu>
+        <h1>First Project</h1>
+
+        <menu>
+            <li><a href="project1.html">Project1</a></li>
+            <li><a href="project2.html">Project2</a></li>
+        </menu>
+    </header>
+
+    <main>
+        <h3>First Project Details</h3>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Morbi quis commodo odio aenean sed. Netus et malesuada fames ac turpis. Feugiat pretium
+            nibh ipsum consequat. Amet purus gravida quis blandit turpis cursus in. Id diam maecenas ultricies mi eget
+            mauris pharetra. Turpis egestas integer eget aliquet nibh. Dignissim suspendisse in est ante in nibh mauris
+            cursus. Ac auctor augue mauris augue neque gravida. Praesent elementum facilisis leo vel fringilla est.
+            Commodo viverra maecenas accumsan lacus vel facilisis. Ac odio tempor orci dapibus. Lorem ipsum dolor sit
+            amet. Sed adipiscing diam donec adipiscing. Non odio euismod lacinia at quis risus sed vulputate. Eu
+            volutpat odio facilisis mauris sit amet massa.
+        </p>
+    </main>
+
+    <footer>
+        <small>&copy; copyright Nonexistant 2020 Robert Diasio </small>
+    </footer>
+
+</div>
 </body>
 </html>
