Fixed the Links between pages

--- a/Projects/project2.html
+++ b/Projects/project2.html
@@ -2,40 +2,53 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>project2</title>
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <title>Project 2</title>
+    <link rel="stylesheet" type="text/css" href="../css/f_layout.css">
 
 </head>
 <body>
 <div id="wrapper">
-    <header>
+    <header id="top">
+        <div id="logo">
+            <a href="../../"><img src="../Images/dummyImage.png"></a>
+        </div>
+        <div id="mainMenu">
+            <menu>
+                <li><a href="../">IS117 Home</a></li>
+                <li><a href="index.html">Projects</a></li>
+                <li><a href="../about.html">About</a></li>
+            </menu>
+        </div>
 
-        <menu>
-            <li><a href="../../">Robert Diasio</a></li>
-            <li><a href="../">IS117 Home</a></li>
-            <li><a href="index.html">Projects</a></li>
-            <li><a href="../about.html">About</a></li>
-        </menu>
-        <h1>Second Project</h1>
-
-        <menu>
-            <li><a href="project1.html">Project1</a></li>
-            <li><a href="project2.html">Project2</a></li>
-        </menu>
     </header>
 
-    <main>
-        <h3>Second Project Details</h3>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Morbi quis commodo odio aenean sed. Netus et malesuada fames ac turpis. Feugiat pretium
-            nibh ipsum consequat. Amet purus gravida quis blandit turpis cursus in. Id diam maecenas ultricies mi eget
-            mauris pharetra. Turpis egestas integer eget aliquet nibh. Dignissim suspendisse in est ante in nibh mauris
-            cursus. Ac auctor augue mauris augue neque gravida. Praesent elementum facilisis leo vel fringilla est.
-            Commodo viverra maecenas accumsan lacus vel facilisis. Ac odio tempor orci dapibus. Lorem ipsum dolor sit
-            amet. Sed adipiscing diam donec adipiscing. Non odio euismod lacinia at quis risus sed vulputate. Eu
-            volutpat odio facilisis mauris sit amet massa.
-        </p>
+    <main id="mainArea">
+        <div id="content">
+            <h2>Project 2</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Morbi quis commodo odio aenean sed. Netus et malesuada fames ac turpis. Feugiat
+                pretium
+                nibh ipsum consequat. Amet purus gravida quis blandit turpis cursus in. Id diam maecenas ultricies mi
+                eget
+                mauris pharetra. Turpis egestas integer eget aliquet nibh. Dignissim suspendisse in est ante in nibh
+                mauris
+                cursus. Ac auctor augue mauris augue neque gravida. Praesent elementum facilisis leo vel fringilla est.
+                Commodo viverra maecenas accumsan lacus vel facilisis. Ac odio tempor orci dapibus. Lorem ipsum dolor
+                sit
+                amet. Sed adipiscing diam donec adipiscing. Non odio euismod lacinia at quis risus sed vulputate. Eu
+                volutpat odio facilisis mauris sit amet massa.
+            </p>
+        </div>
+        <div id="sidebar">
+            <menu>
+                <li><a href="project1.html">Project 1</a></li>
+            </menu>
+            <p>
+                Commodo viverra maecenas accumsan lacus vel facilisis. Ac odio tempor orci dapibus. Lorem ipsum dolor
+                sit amet.
+            </p>
+        </div>
     </main>
 
     <footer>
