--- a/index.html
+++ b/index.html
@@ -3,36 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>IS117 Home</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/z_layout.css">
 
 
 </head>
 
 <body>
 <div id="wrapper">
-    <header>
-        <h3> IS117 Homepage: Fridays 1:00 - 3:50 </h3>
-        <h1> Page for Homework : GIT Intro </h1>
-        <menu>
-            <li><a href="../">Robert Diasio</a></li>
-            <li><a href="index.html">IS117 Home</a></li>
-            <li><a href="Projects">Projects</a></li>
-            <li><a href="about.html">About</a></li>
-        </menu>
+    <header id="top">
+        <div id="logo">
+            <a href="../"><img src="Images/dummyImage.png"></a>
+        </div>
+
+        <div id="mainMenu">
+            <menu>
+                <li><a href="index.html">IS117 Home</a></li>
+                <li><a href="Projects">Projects</a></li>
+                <li><a href="about.html">About</a></li>
+            </menu>
+        </div>
+
     </header>
 
-    <main>
-        <h2>This is For the Homework assignment</h2>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Morbi quis commodo odio aenean sed. Netus et malesuada fames ac turpis. Feugiat pretium
-            nibh ipsum consequat. Amet purus gravida quis blandit turpis cursus in. Id diam maecenas ultricies mi eget
-            mauris pharetra. Turpis egestas integer eget aliquet nibh. Dignissim suspendisse in est ante in nibh mauris
-            cursus. Ac auctor augue mauris augue neque gravida. Praesent elementum facilisis leo vel fringilla est.
-            Commodo viverra maecenas accumsan lacus vel facilisis. Ac odio tempor orci dapibus. Lorem ipsum dolor sit
-            amet. Sed adipiscing diam donec adipiscing. Non odio euismod lacinia at quis risus sed vulputate. Eu
-            volutpat odio facilisis mauris sit amet massa.
-        </p>
+    <main id="mainArea">
+        <div id="content">
+        <h2> IS117 Homepage: Fridays 1:00 - 3:50 </h2>
+            <div id="showcase">
+                <img src="Images/dummyImage.png"/>
+            </div>
         <p>
             Facilisis mauris sit amet massa. Consequat nisl vel pretium lectus quam id leo. Massa tincidunt dui ut
             ornare lectus sit amet est placerat. Nunc scelerisque viverra mauris in. Enim sed faucibus turpis in eu mi
@@ -68,17 +66,8 @@
             tristique senectus et netus et. Pharetra et ultrices neque ornare aenean. Imperdiet proin fermentum leo vel
             orci. Tincidunt tortor aliquam nulla facilisi cras fermentum odio eu.
         </p>
-        <p>
-            Ipsum dolor sit amet consectetur adipiscing elit. Fringilla phasellus faucibus scelerisque eleifend donec.
-            Pellentesque id nibh tortor id aliquet lectus. Sapien eget mi proin sed libero enim sed. Eget lorem dolor
-            sed viverra ipsum nunc aliquet bibendum. Nec ultrices dui sapien eget mi proin sed. Amet nisl purus in
-            mollis. Cras fermentum odio eu feugiat pretium. Sed risus pretium quam vulputate dignissim. Facilisi nullam
-            vehicula ipsum a arcu. Metus aliquam eleifend mi in nulla posuere. Ut tellus elementum sagittis vitae et leo
-            duis ut diam. Risus nullam eget felis eget nunc lobortis mattis aliquam. Diam sollicitudin tempor id eu nisl
-            nunc. Duis convallis convallis tellus id. Tristique magna sit amet purus gravida quis. Massa enim nec dui
-            nunc mattis enim. Lectus magna fringilla urna porttitor rhoncus dolor purus. Nulla facilisi cras fermentum
-            odio eu feugiat. Dignissim convallis aenean et tortor at risus viverra.
-        </p>
+
+</div>
     </main>
 
     <footer>
